# cuckoo_hash

./: CMakeLists.txt  README.md  main.cu  report.md  task1.cu  task2.cu  task3.cu  task4.cu
include/: cuckoo.cuh  cuda_helper.cuh  data_layout.cuh  dycuckoo.cuh  hash_helper.cuh  types.hpp  utils.hpp
tester/: opt_test_case.cu  opt_test_case.cuh  rand_gen.hpp  test_case.cu  test_case.hpp
